Dark mode fix

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -48,7 +48,7 @@ nav {
 @media (prefers-color-scheme: dark) {
   html {
     background-color: var(--dark-bg);
-    color: var(--dark-bg);
+    color: var(--dark-color);
   }
 }
 
